--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:migrate": "tsx db/migrations/migrations.ts"
   },
   "dependencies": {
     "@nextui-org/react": "2.3.6",
@@ -14,13 +15,21 @@
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.10",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "next": "14.2.3",
     "postcss": "8.4.38",
+    "postgres": "^3.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "3.4.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.21.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.10.5",
     "typescript": "5.4.5"
   }
 }
