--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "db:generate": "npx drizzle-kit generate pg",
     "db:migrate": "tsx db/migrations/migrations.ts"
   },
   "dependencies": {
