--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "db:migrate": "tsx db/migrations/migrations.ts"
   },
   "dependencies": {
-    "@nextui-org/react": "2.3.6",
-    "@types/node": "20.12.12",
+    "@nextui-org/react": "2.6.11",
+    "@types/node": "22.13.1",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.10",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
-    "next": "14.2.3",
-    "postcss": "8.4.38",
-    "postgres": "^3.4.4",
+    "next": "^14.2.3",
+    "postcss": "8.5.1",
+    "postgres": "^3.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.3"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.21.2",
+    "drizzle-kit": "^0.30.4",
     "ts-node": "^10.9.2",
-    "tsx": "^4.10.5",
+    "tsx": "^4.19.2",
     "typescript": "5.4.5"
   }
 }
